# visual_learning

./: .gitignore  class_transformer.py  intro.md  pyproject.toml  requirements.txt
generative-modeling-hw2/: main.aux  main.tex
generative-modeling-hw2/flow_matching/: inference.py  model.py
generative-modeling-hw2/gan/: networks.py  q1_3.py  utils.py
generative-modeling-hw2/vae/: model.py  train.py
hw1-recognition/detection/: detection_helper.py  one_stage_detector.py  train.py
hw1-recognition/q1_q2_classification/: hw1.ipynb  simple_cnn.py  train_q2.py  trainer.py  voc_dataset.py
hw2-generative-modeling/: setup.sh
hw2-generative-modeling/gan/: q1_4.py  q1_5.py  train.py
recognition-hw1/: main.tex
recognition-hw1/detection/: detection_utils.py
recognition-hw1/detection/detection_logs/: events.out.tfevents.1759799600.Jonathan-Alien.484254.0  events.out.tfevents.1759800789.Jonathan-Alien.491733.0  events.out.tfevents.1759800883.Jonathan-Alien.492861.0  events.out.tfevents.1759802453.Jonathan-Alien.500979.0  events.out.tfevents.1759803730.Jonathan-Alien.508999.0
recognition-hw1/detection/mAP/: main.py
recognition-hw1/detection/mAP/input/detection-results/: 000005.txt  000007.txt  000009.txt  000016.txt  000019.txt  000020.txt  000021.txt  000024.txt  000030.txt  (+2499 more)
recognition-hw1/detection/utils/: utils.py
recognition-hw1/q1_q2_classification/: train_q1.py  trainer.py
vision-transformer-hw3/: main.tex
vision-transformer-hw3/transformer_captioning/: run.py  trainer.py  transformer.py
vision-transformer-hw3/vit_classification/: trainer.py  vit.py
(+649 files in other folders)
